Knife Project bad precision #42864

Closed
opened 2014-12-10 13:01:48 +01:00 by Mikhail Rachinskiy · 17 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2

Blender Version
Broken: 2.72.2 c8995ec

Short description of error
Knife Project tool gives unexpected results depending on zoom level and global objects position. Some artifacts could be evaded by moving objects slightly right or increasing/reducing zoom level, but if somehow I managed to escape one artifact, another pops out.

This tool would be very handy in product/jewelry design if it will be predictable and stable.

Exact steps for others to reproduce the error

  • Open blend file project_knf.blend
  • See examples for unexpected results, and use test models for tests

Here is few screenshots:
artfkt1.png artfkt2.png artfkt3.png

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 **Blender Version** Broken: 2.72.2 c8995ec **Short description of error** Knife Project tool gives unexpected results depending on zoom level and global objects position. Some artifacts could be evaded by moving objects slightly right or increasing/reducing zoom level, but if somehow I managed to escape one artifact, another pops out. This tool would be very handy in product/jewelry design if it will be predictable and stable. **Exact steps for others to reproduce the error** - Open blend file [project_knf.blend](https://archive.blender.org/developer/F130581/project_knf.blend) - See examples for unexpected results, and use test models for tests Here is few screenshots: ![artfkt1.png](https://archive.blender.org/developer/F130584/artfkt1.png) ![artfkt2.png](https://archive.blender.org/developer/F130586/artfkt2.png) ![artfkt3.png](https://archive.blender.org/developer/F130588/artfkt3.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Campbell Barton was assigned by Bastien Montagne 2014-12-11 09:53:40 +01:00

This issue was referenced by db0e2e7347

This issue was referenced by db0e2e7347db73786b38c0cbace60741ddd28b7e

This issue was referenced by 2329b58fd3

This issue was referenced by 2329b58fd3d978752d200952591fd4e7db7d0fca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2329b58fd3.

Closed by commit 2329b58fd3.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit db0e2e7347.

Closed by commit db0e2e7347.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Thanks for the comprehensive report.

Fixed 2 of the issues:

  • missing cuts artfkt3.png (also around some of the other characters) 2329b58fd3
  • backface selection when cut-through is disabled db0e2e7347.

There is still an issue when cut-through is enabled. I think this is the issue you refer too artfkt1.png
Note that you can workaround this by rotating the model slightly, the issue seems to be caused by 2x intersections on different edges overlapping exactly.

Thanks for the comprehensive report. Fixed 2 of the issues: - missing cuts ![artfkt3.png](https://archive.blender.org/developer/F130588/artfkt3.png) (also around some of the other characters) 2329b58fd3 - backface selection when cut-through is disabled db0e2e7347. ---- > There is still an issue when cut-through is enabled. I think this is the issue you refer too ![artfkt1.png](https://archive.blender.org/developer/F130584/artfkt1.png) > Note that you can workaround this by rotating the model slightly, the issue seems to be caused by 2x intersections on different edges overlapping exactly.

This issue was referenced by 72341537e8

This issue was referenced by 72341537e872f2870e785d9fb8a24d2dbdd71471

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 72341537e8.


Note, all of the reported issues are fixed now from what I can tell, it even fixes some issue you didn't report :)

Closed by commit 72341537e8. ---- Note, all of the reported issues are fixed now from what I can tell, it even fixes some issue you didn't report :)
Author
Member

Big thanks! Test cases are perfectly handled.
But I still get artifacts:

In this case it's selection and cut artifacts, very rare to catch, usually fixed by moving viewport.
To reproduce open blend file and press Knife Project.
artfk_1.png

This is selection only artifact, cut is alright.
To reproduce open blend file and shake the viewport a few times to get rid off previous artifact, and eventually you'll get this one.
artfk_2.png

The same as previous — selection only artifact.
To reproduce open blend file, and try test set to the left from current one.
artfk_3.png

Could this be a weak design of Knife Project tool? So it doesn't matter how much you try, there is always be a possibility for an artifact?

Big thanks! Test cases are perfectly handled. But I still get artifacts: In this case it's selection and cut artifacts, very rare to catch, usually fixed by moving viewport. To reproduce open blend file and press Knife Project. ![artfk_1.png](https://archive.blender.org/developer/F131957/artfk_1.png) This is selection only artifact, cut is alright. To reproduce open blend file and shake the viewport a few times to get rid off previous artifact, and eventually you'll get this one. ![artfk_2.png](https://archive.blender.org/developer/F131961/artfk_2.png) The same as previous — selection only artifact. To reproduce open blend file, and try test set to the left from current one. ![artfk_3.png](https://archive.blender.org/developer/F131966/artfk_3.png) Could this be a weak design of Knife Project tool? So it doesn't matter how much you try, there is always be a possibility for an artifact?
Author
Member
Test file [project_knf_2.blend](https://archive.blender.org/developer/F131971/project_knf_2.blend)

@MikhailRachinskiy, project_knf_2.blend is really related to #42459, so leaving this report closed & linked to the test-cast from there.

That cutting at large or small scale will give problems. Its a real bug but unrelated to the other problems.

Id rather leave this for after 2.73 release.

@MikhailRachinskiy, `project_knf_2.blend` is really related to #42459, so leaving this report closed & linked to the test-cast from there. That cutting at large or small scale will give problems. Its a real bug but unrelated to the other problems. Id rather leave this for after 2.73 release.
Author
Member

OK, thanks!

OK, thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42864
No description provided.