Fix T42864 (partial): Knife-project had too-low precision